--- a/src/components/toc.module.scss
+++ b/src/components/toc.module.scss
@@ -19,10 +19,11 @@
 
 .List {
 
-    // flex: 1 1 auto;
-    overflow-y: auto;
-    max-height: 70vh;
-    scrollbar-width: thin;
+    @media (min-width: 1024px) {
+        overflow-y: auto;
+        max-height: 70vh;
+        scrollbar-width: thin;
+    }
 
     ul {
         list-style: none;
